# icn-dev-node

./: .env.example  .gitignore  .pre-commit-config.yaml  COVM_DEVELOPMENT.md  Cargo.toml  Makefile  README.md  commit_msg.txt
.cursor/prompts/: create-governance-proposal.json  dev-integrity.json  join-or-contribute.json
.github/workflows/: ci.yml
.wallet/: .gitignore
.wallet/identities/: README.md
config/: bootstrap-peers.toml  dev-config.toml  testnet-config.toml
crates/icn-cli/: Cargo.toml
crates/icn-cli/src/: main.rs
crates/icn-node/: Cargo.toml  README.md
crates/icn-node/src/: dag.rs  error.rs  executor.rs  federation.rs  main.rs  queue.rs  state.rs
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: DEVELOPER_SETUP.md
drafts/: example_budget_proposal.dsl  example_federation_config.dsl  example_param_change.dsl
drafts/queue/: proposal_001_pending.dsl
scripts/: agoranet-integration.sh  agoranet-proposal-sync.sh  auto-node.sh  check-covm-status.sh  check-covm-version.sh  commit-covm.sh  common.sh  daemon.sh  demo-proposals.sh  dev-link-covm.sh  dump-code.sh  event-listener.sh  exec-covm.sh  federation-check.sh  generate-identity.sh  icn-node-runner.sh  icn-runtime_dump.txt  init-node.sh  install.sh  join-testnet.sh  mesh-status.sh  mobile-agent.sh  node-state.sh  node-ui.sh  proposal-trace.sh  register-dns.sh  replay-dag.sh  run-agoranet.sh  run-node.sh  setup-covm.sh  simulate-coop.sh  template-registry.sh  test-agoranet-credential-link.sh
scripts/systemd/: icn-node.service  install-service.sh
templates/asset/: new_asset.dsl
(+2 files in other folders)
