[package]
name = "icn-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for ICN node management"
authors = ["ICN Developer Team"]

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13" 