[package]
name = "icn-node"
version = "0.1.0"
edition = "2021"
description = "Cooperative Node Runner for the Intercooperative Network"
authors = ["ICN Developer Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
shellexpand = "3.1"
notify = "6.1"
once_cell = "1.18"
uuid = { version = "1.5", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
md5 = "0.7.0"
icn-covm = { path = "../../deps/icn-covm/crates/icn-covm" }

[dev-dependencies]
tempfile = "3.8"
serial_test = "2.0" 